--- a/students/HaNhatHao.html
+++ b/students/HaNhatHao.html
@@ -104,7 +104,7 @@
 
     <section class="profile">
         <img src="assets/images/avatar.png" alt="Ảnh đại diện" class="avatar">
-        <h2>Về Tôi</h2>
+        <h2>Thông tin</h2>
         <p>Tôi là một lập trình viên đang học .NET Core và React. Tôi yêu thích phát triển web và luôn tìm kiếm cơ hội
             học hỏi.</p>
     </section>
