--- a/students/HuynhLuuThienTan.html
+++ b/students/HuynhLuuThienTan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang Cá Nhân - [Tên của bạn]</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="/nhom10_ktragiuaki.github.io/assets/images/css/style1.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -30,19 +30,19 @@
 
     <!-- Giới thiệu cá nhân -->
     <section id="about" class="container text-center mt-5">
-        <img src="avatar.jpg" class="rounded-circle shadow" width="150" alt="Avatar">
-        <h2 class="mt-3">[Tên của bạn]</h2>
+        <img src="/nhom10_ktragiuaki.github.io/assets/images/HuynhLuuThienTan.jpg" class="rounded-circle shadow" width="150" alt="Avatar">
+        <h2 class="mt-3">Huynh Luu Thien Tan</h2>
         <p>Sở thích: Lập trình, đọc sách, chơi game</p>
-        <p>Định hướng: Trở thành lập trình viên Full-stack / AI Engineer</p>
+        <p>Định hướng: Trở thành lập trình viên Full-stack</p>
     </section>
 
     <!-- Quá trình học tập -->
     <section id="education" class="container mt-5">
         <h2 class="text-center">📚 Quá Trình Học Tập</h2>
         <ul class="list-group">
-            <li class="list-group-item">🔥 Lập trình C/C++ - Đại học XYZ</li>
+            <li class="list-group-item">🔥 Lập trình Java - Đại học Hutech</li>
             <li class="list-group-item">🚀 Phát triển Web - HTML, CSS, JavaScript</li>
-            <li class="list-group-item">🤖 Machine Learning - Python, TensorFlow</li>
+
         </ul>
     </section>
 
@@ -82,9 +82,8 @@
     <!-- Liên hệ -->
     <section id="contact" class="container text-center mt-5">
         <h2>📧 Liên Hệ</h2>
-        <p>Email: your.email@example.com</p>
-        <p>LinkedIn: <a href="#">linkedin.com/in/yourname</a></p>
-        <p>GitHub: <a href="#">github.com/yourgithub</a></p>
+        <p>Email: ttpro115@example.com</p>
+        <p>GitHub: <a href="#">https://github.com/Tankonn</a></p>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
