--- a/students/DangKhanhDuy.html
+++ b/students/DangKhanhDuy.html
@@ -103,7 +103,7 @@
     </header>
 
     <section class="profile">
-        <img src="--assets/images/avatar.png" alt="Ảnh đại diện" class="avatar">
+        <img src="../assets/images/DangKhanhDuy.jpg" alt="Ảnh đại diện" class="avatar">
         <h2>Thông tin</h2>
         <p>Tôi là một lập trình viên đang học .NET Core và React. Tôi yêu thích phát triển web và luôn tìm kiếm cơ hội
             học hỏi.</p>
