--- a/students/HuynhLuuThienTan.html
+++ b/students/HuynhLuuThienTan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang Cá Nhân - [Tên của bạn]</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="../assets/css/style1.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
 
     <!-- Giới thiệu cá nhân -->
     <section id="about" class="container text-center mt-5">
-        <img src="avatar.jpg" class="rounded-circle shadow" width="150" alt="Avatar">
+        <img src="/assets/images/avatar.png" class="rounded-circle shadow" width="150" alt="Avatar">
         <h2 class="mt-3">[Tên của bạn]</h2>
         <p>Sở thích: Lập trình, đọc sách, chơi game</p>
         <p>Định hướng: Trở thành lập trình viên Full-stack / AI Engineer</p>
