--- a/students/HuynhLuuThienTan.html
+++ b/students/HuynhLuuThienTan.html
@@ -34,7 +34,7 @@
     <section id="about" class="container text-center mt-5">
 
 
-        <img src="/nhom10_ktragiuaki.github.io/assets/images/HuynhLuuThienTan.jpg" class="rounded-circle shadow" width="150" alt="Avatar">
+        <img src="../assets/images/HuynhLuuThienTan.jpg" class="rounded-circle shadow" width="150" alt="Avatar">
         <h2 class="mt-3">Huynh Luu Thien Tan</h2>
         <p>Sở thích: Lập trình, đọc sách, chơi game</p>
         <p>Định hướng: Trở thành lập trình viên Full-stack</p>
