--- a/students/DangKhanhDuy.html
+++ b/students/DangKhanhDuy.html
@@ -1,125 +1,109 @@
 <!DOCTYPE html>
 <html lang="vi">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giới Thiệu Bản Thân</title>
     <style>
-        /* Thiết lập font chữ và màu sắc chung */
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f9fa;
+            background-color: #f4f4f9;
             color: #333;
         }
-
-        /* Header */
         header {
-            background: linear-gradient(135deg, #007BFF, #0056b3);
+            background-color: #222;
             color: white;
             text-align: center;
-            padding: 40px 20px;
-            font-size: 1.5em;
+            padding: 20px;
+            font-size: 1.8em;
+        }
+        .container {
+            width: 80%;
+            margin: 30px auto;
+        }
+        .section {
+            background: white;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
-
-        /* Phần profile */
-        .profile {
-            width: 90%;
-            max-width: 600px;
-            background: white;
-            margin: 50px auto;
-            padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+        .profile img {
+            display: block;
+            margin: 0 auto;
+            width: 180px;
+            height: 180px;
+            border-radius: 50%;
+            border: 4px solid #222;
+        }
+        h2 {
+            color: #222;
             text-align: center;
         }
-
-        /* Ảnh đại diện */
-        .avatar {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 4px solid #007BFF;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-
-        .avatar:hover {
-            transform: scale(1.05);
-        }
-
-        /* Tiêu đề phần giới thiệu */
-        h2 {
-            color: #007BFF;
-            margin-top: 20px;
-        }
-
-        /* Định dạng văn bản */
         p {
             font-size: 1.1em;
             line-height: 1.6;
-        }
-
-        /* Phần liên hệ */
-        .contact {
-            width: 90%;
-            max-width: 600px;
-            background: white;
-            margin: 30px auto;
-            padding: 25px;
-            border-radius: 12px;
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.12);
             text-align: center;
         }
-
-        /* Link */
+        .skills ul, .projects ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .skills li, .projects li {
+            background: #007BFF;
+            color: white;
+            padding: 10px;
+            margin: 5px 0;
+            border-radius: 5px;
+            text-align: center;
+        }
         .contact a {
             color: #007BFF;
             font-weight: bold;
             text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        .contact a:hover {
-            color: #0056b3;
-        }
-
-        /* Hiệu ứng khi rê chuột vào thẻ section */
-        .profile:hover,
-        .contact:hover {
-            transform: translateY(-5px);
-            transition: 0.3s ease-in-out;
+            display: block;
+            text-align: center;
+            margin-top: 10px;
         }
     </style>
 </head>
-
 <body>
-    <header>
-        <h1>Xin chào! Tôi là Đặng Khánh Duy</h1>
-    </header>
-
-    <section class="profile">
-        <img src="../assets/images/DangKhanhDuy.jpg" alt="Ảnh đại diện" class="avatar">
-        <h2>Thông tin</h2>
-        <p>Tôi là một lập trình viên đang học .NET Core và React. Tôi yêu thích phát triển web và luôn tìm kiếm cơ hội
-            học hỏi.</p>
-    </section>
-
-    <section class="contact">
-        <h2>Liên Hệ</h2>
-        <p>Email: duydk4215@gmail.com</p>
-        <p>GitHub: <a href="https://github.com/Nhathao03" target="_blank">https://github.com/DuyDK2003</a></p>
-    </section>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            console.log("Trang đã tải xong!");
-        });
-    </script>
+    <header>Giới Thiệu Bản Thân</header>
+    <div class="container">
+        <section class="section profile">
+            <img src="../assets/images/DangKhanhDuy.jpg" alt="Ảnh đại diện">
+            <h2>Đặng Khánh Duy</h2>
+            <p>Sở thích: Lập trình, đọc sách, du lịch.</p>
+            <p>Định hướng nghề nghiệp: Trở thành Full-Stack Developer với .NET Core và React.</p>
+        </section>
+        <section class="section education">
+            <h2>Quá Trình Học Tập</h2>
+            <p>Đã học các môn quan trọng như: Cấu trúc dữ liệu & Giải thuật, Lập trình hướng đối tượng, Cơ sở dữ liệu.</p>
+            <p>Thực hiện các dự án về phát triển web và phần mềm.</p>
+        </section>
+        <section class="section skills">
+            <h2>Kỹ Năng Đạt Được</h2>
+            <ul>
+                <li>Lập trình: .NET Core, React, JavaScript</li>
+                <li>Thiết kế UI/UX: Figma, Adobe XD</li>
+                <li>Cơ sở dữ liệu: MySQL, SQL Server</li>
+            </ul>
+        </section>
+        <section class="section projects">
+            <h2>Dự Án Cá Nhân</h2>
+            <ul>
+                <li>Website quản lý công việc cá nhân</li>
+                <li>Ứng dụng quản lý học tập với React</li>
+                <li>Hệ thống đăng ký khóa học trực tuyến</li>
+            </ul>
+        </section>
+        <section class="section contact">
+            <h2>Liên Hệ</h2>
+            <p>Email: duydk4215@gmail.com</p>
+            <p>GitHub: <a href="https://github.com/DuyDK2003" target="_blank">github.com/DuyDK2003</a></p>
+        </section>
+    </div>
 </body>
-
 </html>
